# cryptos-ui

./: CMakeLists.txt  Encryption.c  FileBrowser.c  LICENSE  README.md  device.h  functions.c  functions.h  global.h  main.c  style.c  ui.c
